# rahzom

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/sandbox-linux-init/: Dockerfile  SKILL.md  docker-exec.sh  docker-run.sh
.claude/skills/sandbox-linux-testing/: SKILL.md  presets.md
.claude/skills/sandbox-windows-init/: SKILL.md  build.ps1  setup-user.ps1
.claude/skills/sandbox-windows-init/console-bridge/: Cargo.toml
.claude/skills/sandbox-windows-init/console-bridge/src/: main.rs
.claude/skills/sandbox-windows-testing/: SKILL.md  presets.md
docs/: ARCHITECTURE.md  REQUIREMENTS.md  TASKS.md  rahzom-tui-testing-spec.md  rahzom-windows-testing-spec.md  refactoring.md
docs/features/: 0001_PLAN_tui_testing_skills.md  0002_PLAN_windows_sandbox_mcp_testing.md
src/: app.rs  lib.rs  main.rs
src/app/: handlers.rs  mod.rs  state.rs
src/config/: project.rs
src/sync/: differ.rs  exclusions.rs  executor.rs  metadata.rs  mod.rs  scanner.rs  utils.rs
src/ui/: dialogs.rs  mod.rs  screens.rs  sync_ui.rs  widgets.rs
tests/: test_common.rs
tests/common/: mod.rs
tests/integration/: mod.rs
