[package]
name = "rahzom"
version = "0.3.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
sha2 = "0.10"
dirs = "5"

[dev-dependencies]
tempfile = "3"
