[package]
name = "console-bridge"
version = "0.1.0"
edition = "2021"
description = "Console bridge for rahzom TUI testing - injects keystrokes via WriteConsoleInput"

[dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse"
]}
